<resources>
    <string name="app_name">GymFLow</string>
    <string name="text_inicio">Inicio</string>
    <string name="text_anadir">Añadir</string>
    <string name="text_ver">Ver</string>
    <string name="txtEjercicio">Ejercicio</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtGrupo">Grupo muscular</string>
    <string name="txtSalir">Salir</string>
    <string name="txtVolver">Volver</string>
    <string name="txtRepeticiones">Repeticiones</string>
    <string name="txtSeries">Series</string>
    <string name="txtDescripcion">Descripción</string>
    <string name="txtCrear">Añadir ejercicio</string>
    <string name="txtSelecciona">Elige un grupo</string>
    <string name="txtErrorInsert">Error al insertar los datos</string>
    <string name="txtErrorSelect">Error al recoger los datos</string>
    <string name="txtErrorCrearBD">Error al abrir/crear la base de datos</string>
    <string name="txtNoHayEjercicios">no hay ejercicios de este grupo muscular</string>
    <string name="txtErrorCargarEjercicio">Ha sucedido un error al cargar el ejercicio seleccionado</string>
    <string name="txtErrorCargarImagen">Ha sucedido un error al intentar cargar la imagen</string>
    <string name="txtErrorCargarVideo">Ha sucedido un error al intentar cargar el video</string>
    <string name="txtErrorCargarAudio">Ha sucedido un error al intentar cargar el audio</string>
    <string name="txtGrabarAudio">Grabar audio</string>
    <string name="txtPararAudio">Dejar de grabar</string>
    <string name="txtSxR">S x R</string>
    <string name="txtGrabando">Grabando…</string>
    <string name="txtGrabacionTerminada">Grabación terminada correctamente</string>
    <string name="txtErrorGrabacionAudio">Ha sucedido un error en la grabación del audio</string>
    <string name="txtCamposVacios">Todos los campos tienen que estar llenos</string>
    <string name="txtEjercicioGuardado">Ejercicio guardado correctamente</string>
    <string name="txtErrorGuardarAudio">Error al guardar el audio</string>
    <string name="txtErrorGuardarVideo">Error al guardar el video</string>
    <string name="txtErrorGuardarImagen">Error al guardar la imagen</string>
    <string name="txtPermisosNoAceptados">Sin aceptar los permisos no se puede crear un ejercicio</string>
    <string name="txtCapturaImagenCancelada">Captura de imagen cancelada</string>
    <string name="txtCapturaVideoCancelada">Captura de video cancelada</string>
    <string name="txtAudio">Audio</string>
    <string name="txtImagen">Imagen</string>
    <string name="txtVideo">Video</string>
    <string name="txtOrdenar">ordenar</string>
    <string name="txtSeleccionaGrupoMuscular">Selecciona un grupo muscular</string>
    <string name="txtGrupoPecho">Pecho</string>
    <string name="txtGrupoBrazo">Brazo</string>
    <string name="txtGrupoPierna">Pierna</string>
    <string name="txtGrupoEspalda">Espalda</string>
</resources>