<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgfondo"
    tools:context=".activities.GrupoMuscularActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="178dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/txtVolver"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="68dp"
        android:text="@string/txtSalir"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/cboxMusculos"
        android:layout_width="273dp"
        android:layout_height="67dp"
        android:layout_marginTop="24dp"
        android:alpha="0.7"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line" />

    <TableLayout
        android:id="@+id/tablaEjer"
        android:layout_width="360dp"
        android:layout_height="433dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cboxMusculos"
        app:layout_constraintVertical_bias="0.709">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE">

            <TextView
                android:layout_width="135dp"
                android:layout_height="60dp"
                android:background="@drawable/cell_border"
                android:gravity="center"
                android:text="@string/txtImagen"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="135dp"
                android:layout_height="60dp"
                android:background="@drawable/cell_border"
                android:gravity="center"
                android:text="@string/txtNombre"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:background="@drawable/cell_border"
                android:gravity="center"
                android:text="@string/txtSxR"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="128dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOrdenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="224dp"
        android:text="@string/txtOrdenar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>